vivado_hls.log
INFO: [HLS 200-10] Running 'C:/Xilinx/Vivado/2019.2/bin/unwrapped/win64.o/vivado_hls.exe'
INFO: [HLS 200-10] For user 'leo870823' on host 'desktop-t3r8mjh' (Windows NT_amd64 version 6.2) on Sat Jan 09 13:30:51 +0800 2021
INFO: [HLS 200-10] In directory 'C:/Users/leo870823/Desktop/MSOC/2020MSOC_Final'
Sourcing Tcl script 'C:/Users/leo870823/Desktop/MSOC/2020MSOC_Final/ISPfinal/solution1/csynth.tcl'
INFO: [HLS 200-10] Opening project 'C:/Users/leo870823/Desktop/MSOC/2020MSOC_Final/ISPfinal'.
INFO: [HLS 200-10] Adding design file 'deblur.cpp' to the project
INFO: [HLS 200-10] Adding design file 'deblur.h' to the project
INFO: [HLS 200-10] Adding design file 'divergent.cpp' to the project
INFO: [HLS 200-10] Adding design file 'divergent.h' to the project
INFO: [HLS 200-10] Adding design file 'fft_top.cpp' to the project
INFO: [HLS 200-10] Adding design file 'fft_top.h' to the project
INFO: [HLS 200-10] Adding design file 'proximal.cpp' to the project
INFO: [HLS 200-10] Adding design file 'proximal.h' to the project
INFO: [HLS 200-10] Adding test bench file 'tb_files/DeconvolutionColorPrior/DENOM.txt' to the project
INFO: [HLS 200-10] Adding test bench file 'tb_files/I_blurred_B.txt' to the project
INFO: [HLS 200-10] Adding test bench file 'tb_files/I_blurred_G.txt' to the project
INFO: [HLS 200-10] Adding test bench file 'tb_files/I_blurred_R.txt' to the project
INFO: [HLS 200-10] Adding test bench file 'tb_files/DeconvolutionColorPrior/REAL.txt' to the project
INFO: [HLS 200-10] Adding test bench file 'tb_files/ground_truth_B.txt' to the project
INFO: [HLS 200-10] Adding test bench file 'tb_files/ground_truth_G.txt' to the project
INFO: [HLS 200-10] Adding test bench file 'tb_files/ground_truth_R.txt' to the project
INFO: [HLS 200-10] Adding test bench file 'tb.cpp' to the project
INFO: [HLS 200-10] Opening solution 'C:/Users/leo870823/Desktop/MSOC/2020MSOC_Final/ISPfinal/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg400-1'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'proximal.cpp' ... 
WARNING: [HLS 200-40] In file included from proximal.cpp:1:
In file included from ./proximal.h:1:
In file included from ./fft_top.h:94:
In file included from C:/Xilinx/Vivado/2019.2/common/technology/autopilot\hls_fft.h:912:
In file included from C:/Xilinx/Vivado/2019.2/common/technology/autopilot/hls_fft_x_complex.h:68:
C:/Xilinx/Vivado/2019.2/common/technology/autopilot/hls_x_complex.h:43:9: warning: hls::x_complex library will be replaced in 2019.2 with a new implementation that does not provide automatic bit width expansion. Please avoid relying on this feature. [-W#pragma-messages]
#pragma message("hls::x_complex library will be replaced in 2019.2 with a new implementation that does not provide automatic bit width expansion. Please avoid relying on this feature.")
        ^
1 warning generated.
WARNING: [HLS 200-40] In file included from proximal.cpp:1:
In file included from proximal.cpp:1:
In file included from ./proximal.h:1:
In file included from ./fft_top.h:94:
In file included from C:/Xilinx/Vivado/2019.2/common/technology/autopilot\hls_fft.h:913:
In file included from C:/Xilinx/Vivado/2019.2/common/technology/autopilot/hls_fft_x_complex.h:68:
C:/Xilinx/Vivado/2019.2/common/technology/autopilot/hls_x_complex.h:43:9: warning: hls::x_complex library will be replaced in 2019.2 with a new implementation that does not provide automatic bit width expansion. Please avoid relying on this feature. [-W#pragma-messages]
#pragma message("hls::x_complex library will be replaced in 2019.2 with a new implementation that does not provide automatic bit width expansion. Please avoid relying on this feature.")
        ^
1 warning generated.
INFO: [HLS 200-10] Analyzing design file 'fft_top.cpp' ... 
WARNING: [HLS 200-40] In file included from fft_top.cpp:95:
In file included from C:/Xilinx/Vivado/2019.2/common/technology/autopilot\hls_fft.h:912:
In file included from C:/Xilinx/Vivado/2019.2/common/technology/autopilot/hls_fft_x_complex.h:68:
C:/Xilinx/Vivado/2019.2/common/technology/autopilot/hls_x_complex.h:43:9: warning: hls::x_complex library will be replaced in 2019.2 with a new implementation that does not provide automatic bit width expansion. Please avoid relying on this feature. [-W#pragma-messages]
#pragma message("hls::x_complex library will be replaced in 2019.2 with a new implementation that does not provide automatic bit width expansion. Please avoid relying on this feature.")
        ^
1 warning generated.
WARNING: [HLS 200-40] In file included from fft_top.cpp:1:
In file included from fft_top.cpp:95:
In file included from C:/Xilinx/Vivado/2019.2/common/technology/autopilot\hls_fft.h:913:
In file included from C:/Xilinx/Vivado/2019.2/common/technology/autopilot/hls_fft_x_complex.h:68:
C:/Xilinx/Vivado/2019.2/common/technology/autopilot/hls_x_complex.h:43:9: warning: hls::x_complex library will be replaced in 2019.2 with a new implementation that does not provide automatic bit width expansion. Please avoid relying on this feature. [-W#pragma-messages]
#pragma message("hls::x_complex library will be replaced in 2019.2 with a new implementation that does not provide automatic bit width expansion. Please avoid relying on this feature.")
        ^
1 warning generated.
INFO: [HLS 200-10] Analyzing design file 'divergent.cpp' ... 
INFO: [HLS 200-10] Analyzing design file 'deblur.cpp' ... 
WARNING: [HLS 200-40] In file included from deblur.cpp:1:
In file included from ./deblur.h:1:
In file included from ./proximal.h:1:
In file included from ./fft_top.h:94:
In file included from C:/Xilinx/Vivado/2019.2/common/technology/autopilot\hls_fft.h:912:
In file included from C:/Xilinx/Vivado/2019.2/common/technology/autopilot/hls_fft_x_complex.h:68:
C:/Xilinx/Vivado/2019.2/common/technology/autopilot/hls_x_complex.h:43:9: warning: hls::x_complex library will be replaced in 2019.2 with a new implementation that does not provide automatic bit width expansion. Please avoid relying on this feature. [-W#pragma-messages]
#pragma message("hls::x_complex library will be replaced in 2019.2 with a new implementation that does not provide automatic bit width expansion. Please avoid relying on this feature.")
        ^
1 warning generated.
ERROR: [HLS 200-70] Compilation errors found: In file included from deblur.cpp:1:
In file included from deblur.cpp:1:
In file included from ./deblur.h:1:
In file included from ./proximal.h:1:
In file included from ./fft_top.h:94:
In file included from C:/Xilinx/Vivado/2019.2/common/technology/autopilot\hls_fft.h:913:
In file included from C:/Xilinx/Vivado/2019.2/common/technology/autopilot/hls_fft_x_complex.h:68:
C:/Xilinx/Vivado/2019.2/common/technology/autopilot/hls_x_complex.h:43:9: warning: hls::x_complex library will be replaced in 2019.2 with a new implementation that does not provide automatic bit width expansion. Please avoid relying on this feature. [-W#pragma-messages]
#pragma message("hls::x_complex library will be replaced in 2019.2 with a new implementation that does not provide automatic bit width expansion. Please avoid relying on this feature.")
        ^
In file included from deblur.cpp:1:
deblur.cpp:53:3: error: use of undeclared identifier 'printf'
{ printf("[DEBUG] cross channel prior\n");
  ^
deblur.cpp:62:6: error: use of undeclared identifier 'printf'
     printf("[DEBUG] array copy\n");
     ^
deblur.cpp:64:9: error: use of undeclared identifier 'printf'
        printf("[DEBUG] my_filter_v1\n");
        ^
deblur.cpp:66:9: error: use of undeclared identifier 'printf'
        printf("[DEBUG] ProxGS\n");
        ^
deblur.cpp:68:9: error: use of undeclared identifier 'printf'
        printf("[DEBUG] Relax\n");
        ^
1 warning and 5 errors generated.
Failed during preprocessing.
    while executing
"source C:/Users/leo870823/Desktop/MSOC/2020MSOC_Final/ISPfinal/solution1/csynth.tcl"
    invoked from within
"hls::main C:/Users/leo870823/Desktop/MSOC/2020MSOC_Final/ISPfinal/solution1/csynth.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$args"
    (procedure "hls_proc" line 5)
    invoked from within
"hls_proc $argv"
